作品、日誌 search調整 + 第2層麵包屑

--- a/package.json
+++ b/package.json
@@ -30,5 +30,7 @@
         "vue-template-compiler": "^2.6.11",
         "zoom-vanilla.js": "^2.0.6"
     },
-    "dependencies": {}
+    "dependencies": {
+        "font-awesome": "^4.7.0"
+    }
 }
